Finalizado el reto

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
       <section class="header">
         <div class="top"><a class="top__link" href="#"><span class="material-icons">arrow_back_ios</span></a><a class="top__link" href="#"><span class="material-icons">turned_in_not</span> </a></div>
         <div class="bottom">
-          <p class="episode">Season 01 &#183; Episode 02</p>
-          <h1 class="title">Mr Robot</h1>
+          <p class="bottom__episode">Season 01 &#183; Episode 02</p>
+          <h1 class="bottom__title">Mr Robot</h1>
         </div>
       </section>
       <section class="body">
-        <p class="description">Elliot, a brilliant but highly unstable young cyber-security engineer and vigilante hacker, becomes a key figure in a complex game of global dominance when he and his shadowy allies try to take down the corrupt corporation he works for.</p>
+        <p class="body__description">Elliot, a brilliant but highly unstable young cyber-security engineer and vigilante hacker, becomes a key figure in a complex game of global dominance when he and his shadowy allies try to take down the corrupt corporation he works for.</p>
         <div class="reporduction">
-          <button><span class="material-icons">skip_previous</span></button>
-          <button><span class="material-icons">play_circle_filled</span> </button>
-          <button><span class="material-icons">skip_next</span>        </button>
+          <button class="reporduction__button"><span class="material-icons">skip_previous</span></button>
+          <button class="reporduction__button reporduction__button--primary"><span class="material-icons">play_arrow</span>        </button>
+          <button class="reporduction__button"><span class="material-icons">skip_next</span>        </button>
         </div>
       </section>
     </main>
