--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="theme-color" content="#3a3a3a">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reto | Curso de Diseño Web con CSS Grid y Flexbox</title>
     <link rel="stylesheet" href="css/styles.css">
