Finalizado el layout

--- a/neumorphismControl/index.html
+++ b/neumorphismControl/index.html
@@ -8,5 +8,27 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
+    <main class="control"> 
+      <section class="keyPad">
+        <button class="keyPad__btn">ON</button>
+        <button class="keyPad__btn">MC</button>
+        <button class="keyPad__btn">VU</button>
+        <button class="keyPad__btn">UP</button>
+        <button class="keyPad__btn">VD</button>
+        <button class="keyPad__btn">DW</button>
+        <button class="keyPad__btn">MN</button>
+        <button class="keyPad__btn">BK</button>
+      </section>
+      <section class="bottom">
+        <section class="status">
+          <div class="status__mark">.</div>
+          <div class="status__mark">.</div>
+          <div class="status__mark">.</div>
+          <div class="status__mark">.</div>
+          <div class="status__mark">.</div>
+        </section>
+        <p class="brand">PikyR</p>
+      </section>
+    </main>
   </body>
 </html>
