Agregados los estilos a los botones base

--- a/neumorphismControl/index.html
+++ b/neumorphismControl/index.html
@@ -27,7 +27,7 @@
           <div class="status__mark">.</div>
           <div class="status__mark">.</div>
         </section>
-        <p class="brand">PikyR</p>
+        <p class="brand"><b>Pky</b>Rms</p>
       </section>
     </main>
   </body>
